--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ecoleta</title>
   <link rel="stylesheet" href="./styles/main.css">
+  <link rel="stylesheet" href="./styles/home.css">
+  <link rel="stylesheet" href="./styles/responsive.css">
 </head>
 
 <body>
@@ -13,7 +15,7 @@
     <div class="content">
       <header>
         <img src="./assets/logo.svg" alt="Logomarca">
-        <a href="/">
+        <a href="./create-point.html">
           <span></span>
           Cadestre um ponto de coleta
         </a>
